--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="create">Create</string>
     <string name="content_of_qr_code">content of qr code</string>
     <string name="qr_code">qr code</string>
+    <string name="import_qr_code">Import QR Code</string>
 </resources>
