Added new string resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="content_of_qr_code">content of qr code</string>
     <string name="qr_code">qr code</string>
     <string name="import_qr_code">Import QR Code</string>
+    <string name="select_image">Select Image</string>
+    <string name="focus_on_qr_code">Focus on QR code</string>
 </resources>
